[gd_scene load_steps=8 format=3 uid="uid://n4olm2snaall"]

[ext_resource type="Script" path="res://scenes/pickups/heart_pickup/heart_pickup.gd" id="1_nq21l"]
[ext_resource type="AudioStream" uid="uid://dxhe6ukcsrc5" path="res://assets/audio/pickupCoin.wav" id="2_jfswn"]
[ext_resource type="Texture2D" uid="uid://bcw13bmqnsl4c" path="res://scenes/ui/health_bar/sprites/heart.png" id="2_pdny1"]

[sub_resource type="Animation" id="Animation_bvqxw"]
resource_name = "collected"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeartPickupSprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeartPickupSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(3.13834, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_d63n8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HeartPickupSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeartPickupSprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eu7nw"]
_data = {
"RESET": SubResource("Animation_d63n8"),
"collected": SubResource("Animation_bvqxw")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_n5g0y"]
radius = 12.0416

[node name="HeartPickup" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_nq21l")
speed = 20.0
amplitude = 55.0
frequency = 3.5

[node name="LifetimeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 15.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jfswn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_eu7nw")
}

[node name="PickupArea2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="PickupAreaCollision" type="CollisionShape2D" parent="PickupArea2D"]
unique_name_in_owner = true
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_n5g0y")

[node name="HeartPickupSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_pdny1")
